Support planning out more complex plans